fixed gamecard arrow shift

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -336,11 +336,10 @@ body {
   .gameDescription {
     .gameCard-arrow {
       position: absolute;
-      // left: 20px;
-      // top: 20px;
       top: 0px;
       width: 100%;
       height: 100px;
+      box-sizing: border-box;
       padding-left: 15px;
       padding-top: 15px;
       color: white;
@@ -357,7 +356,7 @@ body {
       background-attachment: fixed;
       background-position: center 0;
       background-repeat: no-repeat;
-      background-size: auto 50%;
+      background-size:  auto 50% ;
       margin-top: -15px;
       
     }
